Normal Quote journey clean up and updates

--- a/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
+++ b/src/app/features/gis/components/quotation/components/quotation-details/quotation-details.component.css
@@ -37,3 +37,9 @@ line-height: normal;
     white-space: nowrap;
 }
 
+::ng-deep .p-calendar{
+    height: 30px;
+    width: 350px;
+    border-radius: 4px;
+    
+  }
