--- a/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
+++ b/src/app/features/gis/components/quotation/components/risk-section-details/risk-section-details.component.html
@@ -89,10 +89,7 @@
                   
                   </div>
               </div>
-              <div class="ms-4">
-                <button type="button" class="btn btn-primary ms-3" (click)="createRiskDetail()">Save Details</button>
-
-              </div>
+              <button type="button" class="btn btn-primary float-end " (click)="createRiskDetail()">Save Details</button>
 
           </form>
         </div>
