--- a/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
+++ b/src/app/features/gis/components/quotation/components/quotations-client-details/quotations-client-details.component.html
@@ -8,18 +8,12 @@
         <div class="card-body mx-2 mt-2">
 
             <button class="btn btn-primary float-end" data-bs-toggle="modal" data-bs-target="#selectClient">Select Client</button>
-            <h4 class="text-start mb-3">Prime identity</h4>
+            <h6 class="text-start mb-3">Prime identity</h6>
             <div class="row">
                 <div class="col-md-4">
                     <div class="row mb-4">
-                        <div class="col-md-6">
-                            <input class="form-check-input me-2 mt-2"  formControlName="clientTypeId" value="I" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1" class="quote-label">Individual</label>
-                        </div>
-                        <div class="col-md-6">
-                            <input class="form-check-input me-2 mt-2" formControlName="clientTypeId" value="C" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-                            <label class="form-check-label mb-4 mt-2" for="flexRadioDefault1" class="quote-label">Corporate</label>
-                        </div>
+                       
+
                     </div>
                 </div>
                 <div class="col-md-2"></div>
@@ -27,8 +21,16 @@
            
             <div class="row mb-4">
                 <div class="col-md-4">
-                    <label for="" class="quote-label">Client</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1"  formControlName="id" readonly>
+                    <label for="" class="quote-label">Client Type<span class="required" ></span></label>
+                    <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="clientTypeId"  placement="right" >
+                        <option selected="true" disabled="disabled"></option>
+                        <option value="I">Individual</option>
+                        <option value="C">Corporate</option>
+                       
+
+                      </select >
+
+                    <!-- <input type="text" id="quote-input" class="form-control form-control-sm mb-1"  formControlName="id" readonly> -->
                 </div>
                 <div class="col-md-4">
                     <label for="" class="quote-label">Identifier Type</label>
@@ -40,17 +42,17 @@
                 </div>
                 <div class="col-md-4">
                     <label for=""class="quote-label">Citizenship</label>
-                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1" >
+                    <input type="text" id="quote-input" class="form-control form-control-sm mb-1">
                     
                 </div>
             </div>
             <div class="row mb-4">
                 <div class="col-md-4">
-                    <label for="" class="quote-label">Surname</label>
+                    <label for="" class="quote-label">Surname<span class="required" ></span></label>
                     <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="lastName">
                 </div>
                 <div class="col-md-4">
-                    <label for="" class="quote-label">Other Name</label>
+                    <label for="" class="quote-label">Other Name<span class="required" ></span></label>
                     <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="firstName">
                 </div>
                 <div class="col-md-4">
@@ -60,11 +62,11 @@
             </div>
             <div class="row mb-4">
                 <div class="col-md-4">
-                    <label for="" class="quote-label">ID number</label>
+                    <label for="" class="quote-label">ID number<span class="required" ></span></label>
                     <input type="number" id="quote-input" class="form-control form-control-sm mb-1" formControlName="idNumber">
                 </div>
                 <div class="col-md-4">
-                    <label for="" class="quote-label">Gender</label>
+                    <label for="" class="quote-label">Gender<span class="required" ></span></label>
                     <select id="status" class="form-select form-select-sm mb-1" id="quote-input"  formControlName="gender"  placement="right" >
                         <option selected="true" disabled="disabled"></option>
                         <option value="M">Male</option>
@@ -78,7 +80,7 @@
                     
                 </div>
                 <div class="col-md-4">
-                    <label for="" class="quote-label">Pin number</label>
+                    <label for="" class="quote-label">Pin number<span class="required" ></span></label>
                     <input type="text" id="quote-input" class="form-control form-control-sm mb-1" formControlName="pinNumber">
                 </div>
             </div>
@@ -88,9 +90,16 @@
       <!-- Contact Details Form -->
       <div class="card mb-4">
         <div class="card-body mx-2 mt-2">
+           <div class="row">
+            <div class="col-8"> <h6 class="text-start mb-3">Contact Details</h6></div>
+            <div class="col-4 d-flex justify-content-end">
+                <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#contactDetails" aria-expanded="false" aria-controls="contactDetails">
+                  <i class="fa-solid fa-chevron-down"></i>
+                </button>
+              </div>
+           </div>
            
-            <h4 class="text-start mb-3">Contact Details</h4>
-        
+           <div class="collapse mt-4" id="contactDetails">
            
             <div class="row mb-4">
                 <div class="col-md-4">
@@ -129,7 +138,7 @@
                       </select >
                 </div>
             </div>
-           
+           </div>
         </div>
       </div>
 
@@ -137,9 +146,17 @@
       <div class="card mb-4">
         <div class="card-body mx-2 mt-2">
            
-            <h4 class="text-start mb-3">Postal Address Details</h4>
-        
+          
+            <div class="row">
+                <div class="col-8"> <h6 class="text-start mb-3">Postal Address Details</h6></div>
+                <div class="col-4 d-flex justify-content-end">
+                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#postalAddress" aria-expanded="false" aria-controls="contactDetails">
+                      <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                  </div>
+               </div>
            
+        <div class="collapse mt-4" id="postalAddress">
             <div class="row mb-4">
                 <div class="col-md-4">
                     <label for="" class="quote-label">P.O Box number</label>
@@ -174,17 +191,24 @@
                 </div>
               
             </div>
-           
+        </div>
         </div>
       </div>
       
       <!-- BANKING DETAILS -->
       <div class="card mb-4">
         <div class="card-body mx-2 mt-2">
-           
-            <h4 class="text-start mb-3">Banking details</h4>
+            <div class="row">
+                <div class="col-8"> <h6 class="text-start mb-3">Banking Details</h6></div>
+                <div class="col-4 d-flex justify-content-end">
+                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#bankingDetails" aria-expanded="false" aria-controls="contactDetails">
+                      <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                  </div>
+               </div>
         
-           
+
+         <div class="collapse mt-4" id="bankingDetails">
             <div class="row mb-4">
                 <div class="col-md-4">
                     <label for="" class="quote-label">Bank</label>
@@ -237,15 +261,23 @@
                 </div>
             </div>
         </div>
+        </div>
       </div>
 
       <!-- WEALTH AML DETAILS -->
       <div class="card mb-4">
         <div class="card-body mx-2 mt-2">
            
-            <h4 class="text-start mb-3">Wealth AML details</h4>
-        
+            <div class="row">
+                <div class="col-8"> <h6 class="text-start mb-3">Wealth AML details</h6></div>
+                <div class="col-4 d-flex justify-content-end">
+                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#amlDetails" aria-expanded="false" aria-controls="contactDetails">
+                      <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                  </div>
+               </div>
            
+        <div class="collapse mt-4" id="amlDetails">
             <div class="row mb-4">
                 <div class="col-md-4">
                     <label for="" class="quote-label">Citizenship</label>
@@ -295,14 +327,26 @@
                 </div>
             </div>
         </div>
+        </div>
       </div>
 
       <div class="card mb-4">
-        <div class="card-body">
-            <p class="text-muted">Upload documents</p>
-            <input type="file" id="inputProfileImg" formControlName="uploadFile" hidden [ngModel]="uploadFile" />
-            <label  for="inputProfileImg" class="img_upload"  style="margin-right: 15px;margin-top: 5px;">Choose File</label>
-
+        <div class="card-body  mx-2 mt-2">
+           
+            <div class="row">
+                <div class="col-8"> 
+                    <h6 class="text-start mb-3">Upload documents</h6>
+                </div>
+                <div class="col-4 d-flex justify-content-end">
+                    <button type="button" id="icon" class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#bankingDetails" aria-expanded="false" aria-controls="contactDetails">
+                      <i class="fa-solid fa-chevron-down"></i>
+                    </button>
+                  </div>
+               </div>
+               <div class="collapse mt-4" id="bankingDetails">
+                <input type="file" id="inputProfileImg" formControlName="uploadFile" hidden [ngModel]="uploadFile" />
+                <label  for="inputProfileImg" class="img_upload"  style="margin-right: 15px;margin-top: 5px;">Choose File</label>
+                </div>
         </div>
       </div>
       <div class="float-start"></div>
