VQ-864 | Need Analysis using JSONB

--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.css
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.css
@@ -22,3 +22,7 @@ div > div > span:nth-child(2) {
   cursor: pointer;
   color: var(--primary-color) !important;
 }
+
+.click:hover {
+  cursor: pointer;
+}
