--- a/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/analysis-product-list/analysis-product-list.component.html
@@ -1,7 +1,7 @@
-<div class="text-black fw-medium pt-4 pr-4">Please select a product to proceed</div>
+<div class="text-black fw-medium pr-4">Please select a product to proceed</div>
 
 <div>
-  <div class="row justify-content-start pt-4 p-4">
+  <div class="row justify-content-start p-4">
     <ng-container *ngFor="let item of products">
       <div class="col-lg-3 col-md-6 col-sm-12 px-2">
         <app-product-data [productId]="item"></app-product-data>
