--- a/src/app/features/lms/ind/components/need-analysis/components/need-analysis/need-analysis.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/need-analysis/need-analysis.component.html
@@ -16,31 +16,36 @@ name="analysis_view"
       </div>
 
       <div class="pb-4" >
-        <div class=" d-flex justify-content-center">
+        <!-- <div class=" d-flex justify-content-center">
           <div class=" w-50 pb-2 pt-4" style="color: var(--grey-color);">
             <div>Step {{questionSelected.length}}</div>
           </div>
 
-        </div>
+        </div> -->
 
-        <div class=" d-flex justify-content-center">
+        <!-- <div class=" d-flex justify-content-center">
           <div class=" progress w-50">
             <div class="progress-bar" role="progressbar" style="width: 50%; height: 3px; border-right: 5px solid #fafafa;" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
 
-      <div *ngFor="let item of questionSelected; let i = index;">
-        <div>
-          <app-questions *ngIf="questionSelected[i]?.options && questionSelected[i]?.options.length>0 " [questions]=item [optionPosition]=optionSelected[i] [index]=i+1 (selectOption)="selectOption($event)"></app-questions>
-          <div *ngIf="questionSelected[i]?.products && questionSelected[i]?.products.length>0">
-            <app-analysis-product-list [products]="questionSelected[i]?.products"></app-analysis-product-list>
+      <div >
+        <div *ngFor="let item of questionSelected; let i = index;">
+          <div>
+            <div *ngIf="!(questionData['products'] && questionData['products'].length>0)">
+              <app-questions *ngIf="questionSelected[i]?.options && questionSelected[i]?.options.length>0 " [questions]=item [optionPosition]=optionSelected[i] [index]=i+1 (selectOption)="selectOption($event)"></app-questions>
+            </div>
+
+            <div *ngIf="questionSelected[i]?.products && questionSelected[i]?.products.length>0 ">
+              <app-analysis-product-list [products]="questionSelected[i]?.products"></app-analysis-product-list>
+            </div>
           </div>
+
+
         </div>
-
-
       </div>
 
 
