--- a/src/app/features/lms/ind/components/proposal/components/summary/summary.component.html
+++ b/src/app/features/lms/ind/components/proposal/components/summary/summary.component.html
@@ -71,7 +71,7 @@
   </div>
 
   <div class="row justify-content-end">
-    <div class=" col-lg-1 col-sm-4 btn btn-primary btn-sm w-10" style="transform: translateX(-0.5rem) ;">
+    <div routerLink="/home/lms/ind/policy/underwriting" class=" col-lg-1 col-sm-4 btn btn-primary btn-sm w-10" style="transform: translateX(-0.5rem) ;">
       Proceed
     </div>
   </div>
