--- a/src/app/features/lms/ind/components/quotation/components/lifestyle-details/lifestyle-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/lifestyle-details/lifestyle-details.component.html
@@ -293,7 +293,7 @@
       <i class="fa-solid fa-arrow-left"></i>&nbsp;&nbsp; Back
     </button>
     <button
-      routerLink="/home/lms/ind/quotation/medical-history"
+    (click)="saveClientLisfeStyle()"
       style="padding: 0.6em"
       type="button"
       class="btn btn-primary btn-sm"
