VQ-864 | Update on Need Analysis using JSONB

--- a/src/app/features/lms/ind/components/need-analysis/components/need-analysis/need-analysis.component.html
+++ b/src/app/features/lms/ind/components/need-analysis/components/need-analysis/need-analysis.component.html
@@ -10,7 +10,7 @@ name="analysis_view"
   size="medium"
   bdColor="rgba(255, 255, 255, 0.0)"
 ></ngx-spinner>
-    <div>
+    <div class="full-border">
       <div class="d-flex justify-content-between">
         <div class="fw-bold text-black">Need Analysis</div>
       </div>
