--- a/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/insurance-history/insurance-history.component.html
@@ -456,7 +456,7 @@
       </div>
     </div>
   </div>
-  <div class="d-flex justify-content-between">
+  <div class="d-flex justify-content-between pb-4">
     <button
       routerLink="/home/lms/ind/quotation/client-details"
       style="padding: 0.6em"
