--- a/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/personal-details/personal-details.component.html
@@ -892,46 +892,31 @@
 
         <div class="row mb-2">
           <div class="col-lg-4 col-md-5 col-sm-12">
-            <p-dropdown
-              [options]="identifierTypeList"
+            <select
               formControlName="selectedUploadItem"
-              placeholder="Select Item"
-              [style]="{
-                width: '100%',
-                height: '2.5rem',
-                'border-radius': '0',
-                border: '1px solid #7272716b',
-                'font-size': '14px'
-              }"
-              [group]="true"
+              style="
+                width: 100%;
+                height: 2.5rem;
+                border-radius: 0;
+                border: 1px solid #7272716b;
+                font-size: 14px;
+              "
+              (click)="getFileChange($event)"
             >
-              <ng-template
-                let-group
-                pTemplate="group"
-                style="font-size: 14px; font-weight: 600; color: black"
-              >
-                <div class="p-d-flex p-ai-center">
-                  <span style="text-transform: lowercase; font-size: 13px">{{
-                    group.name.replaceAll("_", " ")
-                  }}</span>
-                </div>
-              </ng-template>
-            </p-dropdown>
+              <option value="" disabled selected>Select Item</option>
+              <ng-container *ngFor="let item of identifierTypeList">
+                <!-- <optgroup label="Upload List"> -->
+                  <option [value]="item['name']">{{item['name'].replaceAll('_', ' ') | lowercase }}</option>
+                <!-- </optgroup> -->
+
+              </ng-container>
+
+
+            </select>
           </div>
           <div class="col-md-6 col-sm-12 justify-md mb-3">
             <div class="d-grid gap-2 mt-2">
-              <button
-                type="button"
-                class="btn btn-primary"
-                style="
-                  background-color: white;
-                  color: var(--primary-color);
-                  border: 2px solid var(--primary-color);
-                  width: 5rem;
-                "
-              >
-                Choose file
-              </button>
+              <input type="file" id="uploadFile" [name]="getValue('selectedUploadItem')" (change)="uploadFile($event)" [disabled]="!getValue('selectedUploadItem')" />
             </div>
           </div>
           <div class="col-12 my-1">List of Uploads</div>
@@ -945,11 +930,11 @@
         size="medium"
         bdColor="rgba(255, 255, 255, 0.9)"
       ></ngx-spinner>
-          <ng-container *ngFor="let document of documentList" >
+          <ng-container *ngFor="let document of documentList; let i=index;" >
 
-            <div >
+            <div class="doc_check" >
               <div class="doc-file-notif">
-                <span>{{ document['type']}}</span>
+                <span>{{ document['type']?.replaceAll('_', ' ')}}</span>
                 <!-- <span> {{ "80%" }}</span> -->
               </div>
               <div class="d-flex">
@@ -1238,6 +1223,34 @@
                     </svg>
                   </div>
                 </ng-container>
+                <ng-container *ngIf="isImage(document['file_extension'])">
+                <!-- <ng-container *ngIf="document['file_extension'] === 'png' ||document['file_extension'] === 'jpg' "> -->
+                  <div class="mr-4">
+                    <div >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        width="37"
+                        height="37"
+                        viewBox="0 0 24 24"
+                      >
+                        <path
+                          fill="#0f52ba"
+                          d="M19 2H5a3.009 3.009 0 0 0-3 3v8.86l3.88-3.88a3.075 3.075 0 0 1 4.24 0l2.871 2.887l.888-.888a3.008 3.008 0 0 1 4.242 0L22 15.86V5a3.009 3.009 0 0 0-3-3z"
+                          opacity=".5"
+                        />
+                        <path
+                          fill="#0f52ba"
+                          d="M10.12 9.98a3.075 3.075 0 0 0-4.24 0L2 13.86V19a3.009 3.009 0 0 0 3 3h14a3 3 0 0 0 2.16-.92L10.12 9.98z"
+                        />
+                        <path
+                          fill="#0f52ba"
+                          d="m22 15.858l-3.879-3.879a3.008 3.008 0 0 0-4.242 0l-.888.888l8.165 8.209c.542-.555.845-1.3.844-2.076v-3.142z"
+                          opacity=".25"
+                        />
+                      </svg>
+                    </div>
+                  </div>
+                </ng-container>
 
                 <div class="col-lg-4 col-md-6 col-sm-10 mt-3 mx-2" (click)="downloadBase64File(document['backend_file_url'])">
                   <div
@@ -1256,12 +1269,17 @@
                   </div>
                 </div>
 
-                <div class="col-2 mt-1 mx-2">
-                  <i class="fas fa-trash-alt text-danger"></i>
+                <div class="col-2 mt-1 mx-2" (click)="deleteDocumentFileById(document['id'], i)">
+                  <i class="fas fa-trash-alt text-danger" ></i>
                 </div>
               </div>
             </div>
 
+          </ng-container>
+          <ng-container *ngIf="documentList?.length===0">
+            <div style="color: red; padding-bottom: 1rem;">
+              No File Upload Available!!
+            </div>
           </ng-container>
          </div>
 
