--- a/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
+++ b/src/app/features/lms/ind/components/quotation/components/quotation-summary/quotation-summary.component.html
@@ -477,6 +477,9 @@
 
 
                       </div>
+                      <div *ngIf="documentList?.length===0" style="color: red;">
+                        No Document Available!!
+                      </div>
                     </div>
                     <div class="col-12">
                       <div
